# projeto-poo-letterboxd

./: CMakeLists.txt  README.md
src/: main.cpp  movie.cpp  movie.hpp  review.cpp  review.hpp  review_list.cpp  review_list.hpp  user.cpp  user.hpp
src/acervo/: exibivel.hpp  filme.cpp  filme.hpp  item_acervo.cpp  item_acervo.hpp  serie.cpp  serie.hpp
src/avaliacao/: avaliacao.cpp  avaliacao.hpp  lista_avaliacoes.cpp  lista_avaliacoes.hpp
src/usuario/: usuario.cpp  usuario.hpp
tests/: test_tp2.cpp
